# mfda-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.venv-test/: pyvenv.cfg
docs/: cli-help.md
docs/design/: core-model.md  readers-contract.md
examples/output/: report.md
src/mfda/: analysis.py  cli.py  core.py  dispatch.py  errors.py  validation.py  visualization.py
src/mfda/readers/: __init__.py  csv_reader.py  html_reader.py  json_reader.py  parquet_reader.py  sqlite_reader.py  xlsx_reader.py
tests/: test_analysis_minimal.py  test_cli_analyze.py  test_cli_help.py  test_cli_read.py  test_cli_report.py  test_cli_validate.py  test_cli_viz.py  test_csv_reader_behavior.py  test_csv_reader_contract.py  test_csv_reader_parse_minimal.py  test_dispatch_detect.py  test_dispatch_extra.py  test_html_reader_parse_minimal.py  test_json_reader_parse_minimal.py  test_parquet_reader_parse_minimal.py  test_readers_contracts.py  test_sqlite_reader_parse_minimal.py  test_validation_minimal.py  test_visualization_minimal.py  test_xlsx_reader_parse_minimal.py
tests/fixtures/: tiny_customers.csv  tiny_customers.tsv  tiny_decimals.csv  tiny_events.jsonl  tiny_users.json  tiny_users_missing.json
