[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfda"
version = "1.0.0"
description = "Multi-Format Data Analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "Apache 2.0" }

dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7",
  "openpyxl>=3.1",      # Excel
  "pyarrow>=14.0",      # Parquet
  "sqlalchemy>=2.0",    # SQLite / SQL readers
  "beautifulsoup4>=4.12" # HTML
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","UP","B","S","W"]
lint.ignore = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]


[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.6",
  "ruff>=0.1",
  "build>=1.0",
  "twine>=4.0"
]

[project.scripts]
mfda = "mfda.cli:main"
